--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -106,3 +106,17 @@
     font-size: 10px;
     opacity: 0.6;
 }
+
+
+
+@media (max-width: 1250px) {
+    .menu__list {
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 1050px) {
+    .menu__list {
+        justify-content: space-around;
+    }
+}
